# CodeEnBlocs

./: .gitignore  CMakeLists.txt  README.md
Executables/Executable MacOSX 10.11.6/: CodeEnBlocs
Executables/Executable MacOSX 10.11.6/res/: allScores.ceg
res/: allScores.ceg
src/: ResourcePath.mm  main.cpp  score.cpp  score.hpp  tools.h
src/gui/: Animation.cpp  Application.cpp  Application.hpp  Bloc.cpp  Bloc.hpp  Button.cpp  Button.hpp  Component.cpp  Container.cpp  Container.hpp  Curseur.cpp  Curseur.hpp  GameButton.cpp  GameButton.hpp  GameExitButton.cpp  GameExitButton.hpp  GameState.cpp  GameState.cpp.orig  GameState.hpp  GameState.hpp.orig  KeyBinding.cpp  KeyBinding.hpp  Label.cpp  Label.hpp  LevelButton.cpp  LevelButton.hpp  LevelManagerState.cpp  LevelManagerState.hpp  LoseState.cpp  LoseState.hpp  MenuState.cpp  MenuState.hpp  MusicPlayer.cpp  MusicPlayer.hpp  ResourceHolder.hpp  ResourceIdentifiers.hpp  SettingsState.cpp  SettingsState.hpp  SoundPlayer.cpp  SoundPlayer.hpp  (+17 more)
src/gui/blocs/: Bloc.cpp  Bloc.hpp  absBloc.cpp  absBloc.hpp  addBloc.cpp  addBloc.cpp.orig  addBloc.hpp  assignmentBloc.cpp  assignmentBloc.hpp  divBloc.cpp  divBloc.hpp  evenBloc.cpp  evenBloc.hpp  inputBloc.cpp  inputBloc.cpp.orig  inputBloc.hpp  moduloBloc.cpp  moduloBloc.hpp  multBloc.cpp  multBloc.hpp  oddBloc.cpp  oddBloc.hpp  outputBloc.cpp  outputBloc.cpp.orig  outputBloc.hpp  subBloc.cpp  subBloc.hpp  variableBloc.cpp  variableBloc.cpp.orig  variableBloc.hpp
src/gui/exemple_main/: absMain.cpp  absMain.hpp  addMain.cpp  addMain.hpp  divMain.cpp  divMain.hpp  evenMain.cpp  evenMain.hpp  moduloMain.cpp  moduloMain.hpp  multMain.cpp  multMain.hpp  oddMain.cpp  oddMain.hpp  subMain.cpp  subMain.hpp
src/model/: InstructionBlocks.cpp  InstructionBlocks.hpp  UniqueObject.cpp  UniqueObject.hpp  absmodel.cpp  absmodel.hpp  additionlevelmodel.cpp  additionlevelmodel.hpp  additionslevelmodel.cpp  additionslevelmodel.hpp  addmodel.cpp  addmodel.hpp  andmodel.cpp  andmodel.hpp  assignmentmodel.cpp  assignmentmodel.hpp  binarymodel.cpp  binarymodel.hpp  blockcompositemodel.hpp  blockmodel.cpp  blockmodel.hpp  blocksimplemodel.hpp  codepagemodel.cpp  codepagemodel.hpp  decmodel.cpp  decmodel.hpp  differentmodel.cpp  differentmodel.hpp  divlevelmodel.cpp  divlevelmodel.hpp  divmodel.cpp  divmodel.hpp  equalmodel.cpp  equalmodel.hpp  evenmodel.cpp  evenmodel.hpp  functionmodel.cpp  functionmodel.hpp  gamemodel.cpp  gamemodel.hpp  (+78 more)
src/template/: templatetemplate.hpp
template/: templatetemplatemodel.cpp  test.cpp
unit_testing/: mainTest.cpp  mainTest.hpp  unitTesting.cpp  unitTesting.hpp
